Fixed Spacing

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body{
 
 .member {
   background: rgba(255, 255, 255, 0.1);
-  padding: 10px 20px;
+  padding: 0;
   border-radius: 15px;
   margin-top: 10px;
 }
@@ -166,6 +166,7 @@ body{
 
 .member > div {
   text-align: center;
+  padding: 10px;
 }
 
 
